<resources>
    <string name="app_name">GTA:SA Savegame Extractor</string>
    <string name="action_settings">Settings</string>
    <string name="connect">Connect</string>
    <string name="upload">Upload</string>
    <string name="okay">Okay</string>
    <string name="upload_success_title">Upload Successful</string>
    <string name="upload_success_message">Upload finished successful!</string>
    <string name="upload_error_title">Upload Error</string>
    <string name="toggle_service_view_mode">Toggle view mode</string>
    <string name="download">Download</string>
    <string name="download_success_title">Download Success</string>
    <string name="download_success_message">Download completed successfully</string>
    <string name="download_error_title">Error Downloading savegame</string>
    <string name="fetching_error_title">Error Fetching savegames</string>
    <string name="fetching_success_message">Successfully fetched available savegames.</string>
    <string name="fetching_error_message_no_files">No savegames available.</string>
    <string name="fetching_error_message_error">Connection Error!</string>
    <string name="searching_services">Searching for Savegame Editors…</string>
    <string name="uploading">Uploading…</string>
    <string name="view_mode_suffix_local">&#160;(local)</string>
    <string name="view_mode_suffix_remote">&#160;(remote)</string>
    <string name="downloading">Downloading…</string>
    <string name="downloading_message">Downloading savegame…</string>
    <string name="fetching_message">Fetching available savegames…</string>
    <string name="action_tutorial">Show Tutorial</string>
    <string name="permission_hook_try_again">Storage permissions are required for this. Please confirm the permission and try again.</string>
    <string name="next">Next</string>
    <string name="tutorial_title">Tutorial</string>
    <string name="cancel">Cancel</string>
    <string name="tutorial_message_1">On the main view you can find a list of all available servers. You need a compatible version of the gtasa-savegame-editor with a running server in the same network as the Android device for it to appear.</string>
    <string name="tutorial_message_2">After clicking \'connect\', the locally detected savegames are shown. The view between local files and files available on the server can be switched using the cloud symbol on the action bar.\nPlease make sure that your Firewall permits connections to the savegame editor.</string>
    <string name="tutorial_message_3">There are multiple methods to search for savegames. Usually, the only working one is the \"manual single file\" mode, where you have to select a single savegame.\nThere is also a \"manual folder\" mode where you can select a folder in which savegames can be found.\nThe "manual single file" mode is active by default!</string>
    <string name="tutorial_message_4">Downloads happen using the Android download manager. For now it\'s necessary to use a file manager to copy the files into the right folder after modifying it.</string>
    <string name="address_error_message">Unable to get address.</string>
    <string name="mdns_error_title">Error!</string>
    <string name="mdns_error_message">Unable to create mDNS listener!</string>
    <string name="service_found">Service found!</string>
    <string name="service_removed">Service removed.</string>
    <string name="service_resolved">Service resolved successfully!</string>
    <string name="setting_toasts_label">Info Toasts</string>
    <string name="reload">Reload</string>
    <string name="default_savegame_name">Error fetching name!</string>
    <string name="title_activity_settings">Settings</string>
    <string name="settings_application">Application</string>
    <string name="setting_toasts_desc">Decides whether to show toasts on certain events.</string>
    <string name="setting_toasts_desc_on">Toasts will be shown on certain events.</string>
    <string name="setting_toasts_desc_off">No Toasts will be shown.</string>
    <string name="settings_network">Network</string>
    <string name="setting_fetch_timeout_default" translatable="false">5000</string>
    <string name="setting_fetch_timeout_desc">Sets the request timeout in milliseconds, zero is indefinite.</string>
    <string name="setting_fetch_timeout">Fetch Timeout</string>
    <string name="permissions_needed">Permissions Required</string>
    <string name="permissions_needed_message">This App needs permission to read and write to your external storage to work properly. You can grant those permissions in the following dialog.</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="storage_path_dialog_title">Storage Path</string>
    <string name="settings_file_system">File System</string>
    <string name="setting_search_method_title">Search Method</string>
    <string name="setting_search_method_desc">Select the method by which savegames are selected.</string>
    <string name="search_method_manual_file">Manual (File)</string>
    <string name="search_method_manual_directory">Manual (Directory)</string>
    <string name="search_method_command_line">Command Line</string>
    <string name="search_method_file_api">File API</string>
    <string name="no_services_found">No services found (yet). Make sure your phone is in the same WiFi as the Savegame Editor and your Firewall permits connections.</string>
    <string name="file_selection_hint_file">Since \"manual\" file discovery is selected in the settings, this app will now open a file selection dialog. Please select a savegame (slot 1–8).</string>
    <string name="file_selection_hint_directory">Since \"manual\" file discovery is selected in the settings, this app will now open a file selection dialog. Please select a folder containing savegames.</string>
    <string name="file_selection_hint_title">Manual Mode</string>
    <string name="no_savegames_found">No savegames found!</string>
    <string name="invalid_service">Invalid service!</string>
</resources>
